--- a/test.html
+++ b/test.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" " http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd "> 
 <html> 
 <head> 
 <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" /> 
@@ -17,8 +18,7 @@
 	</div>
 
 	<div data-role="content">
-         <ul id="appointmentList" data-role="listview" data-filter="true">      
-</ul>
+         <ul id="appointmentList" data-role="listview" data-filter="true"></ul>
     </div>		
 
 </div>
